--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.4",
     "prisma": "^5.16.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/node": "^20",
