--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prisma": "^5.16.0",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
