--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://test:pass123@cluster0.pi3vrdf.mongodb.net/coleblog"
+
+NEXT_PUBLIC_CONTENTFUL_SPACE_ID=zpjswkdvv8mu
+NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN=wfvta6fzARkeizK7kM33FO2iDQttdXWhzB-_qjHzYIM
