--- a/.github/workflows/build-deploy-acr.yml
+++ b/.github/workflows/build-deploy-acr.yml
@@ -1,9 +1,6 @@
 name: Build & Push to Azure Container Registry
 
-on:
-    push:
-        branches:  main 
-    workflow_dispatch:
+on: [ push ]
 jobs:
     build:
         runs-on: ubuntu-latest
