--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.1",
     "@prisma/client": "5.16.0",
     "axios": "^1.7.2",
     "image-to-base64": "^2.2.0",
